k8s-ing-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ing-nginx
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: k8s.lrsoft.id
    http:
      paths:
      - path: /hello-world(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: hello-world-svc
            port:
              name: http
