k8s-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ing
spec:
  rules:
  - host: k8s.lrsoft.id
    http:
      paths:
      - path: /hello-world
        pathType: Prefix
        backend:
          service:
            name: hello-world-svc
            port:
              name: http

  ports:
  - name: http
    port: 30000
    targetPort: http
